# BaskIt

./: .env.example  .gitignore  CHANGELOG.md  README.md  ai_parser.py  api_key.txt  app.py  baskit.context.yaml  config.py  cursor.yaml  packages.txt  pyproject.toml  requirements.txt  setup.py  test_ai_parser.py
.cursor/: rules
.github/: PULL_REQUEST_TEMPLATE.md
ai/: text_to_item.py
app/: ai_utils.py  auth.py  checkout.py  history.py  image.py  main.py  onboarding.py  price_compare.py  reminders.py  shopping_list.py  voice.py
app/data/: products.json
baskit/: __init__.py  config.py
baskit/utils/: __init__.py  logger.py
services/: list_manager.py
src/baskit/ai/: __init__.py  call_gpt.py  errors.py  handlers.py  models.py  text_to_item.py  tool_service.py  tools.py
src/baskit/config/: __init__.py  settings.py
src/baskit/db/: __init__.py  init_db.py  session.py
src/baskit/domain/: types.py
src/baskit/models/: __init__.py  base.py  item.py  list.py  user.py
src/baskit/services/: __init__.py  base_service.py  item_service.py  list_manager.py  list_service.py
src/baskit/utils/: logger.py
src/baskit/web/: __init__.py  app.py
src/baskit/web/components/: __init__.py  add_item.py  disambiguation.py  feedback.py  list_display.py  sidebar.py
tests/: __init__.py  conftest.py
tests/ai/: conftest.py  test_gpt_integration.py  test_text_to_item.py  test_tool_integration.py  test_tools.py
tests/models/: test_models.py
tests/services/: test_item_service.py  test_list_manager.py  test_list_service.py
utils/: logger.py
