[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baskit"
version = "0.1.0"
description = "AI-powered grocery shopping assistant with Hebrew support"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "BaskIt Team" }
]
dependencies = [
    "streamlit>=1.32.2",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.1.1",
]
dev = [
    "pytest>=8.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["baskit"] 